--- a/src/components/ShareCard/index.scss
+++ b/src/components/ShareCard/index.scss
@@ -20,6 +20,9 @@
         
             }
         }
+        img {
+            object-fit: fill;
+        }
         .jump {
             display: none;
             position: absolute;
