--- a/src/components/HeadBar/index.scss
+++ b/src/components/HeadBar/index.scss
@@ -1,14 +1,21 @@
 .head-bar {
   // width: 100%;
   height: 80px;
-  background: #132332;
   display: flex;
   justify-content: space-between;
   align-items: center;
   .logo {
-    margin-left: 20px;
-    color: #fff;
+    display: inline-block;
+    width: 160px;
+    img {
+      vertical-align: middle;
+      width: 100%;
+    }
   }
+  // .logo {
+  //   margin-left: 20px;
+  //   color: #fff;
+  // }
   .menu {
     color: #fff;
     margin-right: 20px;
