--- a/src/pages/Home/index.module.scss
+++ b/src/pages/Home/index.module.scss
@@ -5,11 +5,120 @@
   .title {
     text-align: left;
     color: #828d95;
+    &::before {
+      display: inline-block;
+      width: 2px;
+      height: 20px;
+      margin-right: 20px;
+      content: "";
+      vertical-align: middle;
+      background-color: #736efe;
+      
+    }
     // font-size: 16px;
   }
   .card_list {
-    margin-top: 20px;
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    list-style: none;
+    margin:20px 0;
+    .site_item {
+      width: 200px;
+      height: 40px;
+      a {
+        display: flex;
+        align-items: center;
+        height: 100%;
+        box-shadow: 0 0 10px rgba(102, 102, 102, 0.2);
+        border-radius: 10px;
+        margin-right: 20px;
+        transition: all 0.3s;
+        color: #333;
+        padding: 0 10px;
+        &:hover {
+          transform: scale(1.1);
+        }
+        .site_pic {
+          display: inline-block;
+          width: 20px;
+          height: 20px;
+          margin-right: 10px;
+          img {
+            width: 20px;
+            // height: 100%;
+          }
+        }
+        .site_name {
+          color: #a3a3a3;
+        }
+      }
+    }
     // display: flex;
     // justify-content: space-around;
+  }
+}
+.nav_search {
+  width: 100%;
+  background:url(https://images.pexels.com/photos/4037015/pexels-photo-4037015.jpeg) no-repeat center ;
+  background-size: cover;
+  padding-bottom: 120px;;
+  .box_content {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 40px;
+  // background-color: #fff;
+    // .box_hd {
+    //   width: 200px;
+    //   height: 200px;
+    //   margin: 10px auto;
+    //   border-radius: 50%;
+    //   img {
+    //     width: 100%;
+    //   }
+    // }
+    h1 {
+      font-size: 36px;
+      line-height: 48px;
+      font-weight: 700;
+      margin-top: 0;
+      margin-bottom: 15px;
+      color: #fff;
+    }
+    .box_bd {
+      .search_form {
+        height: 40px;
+        line-height: 40px;
+        box-sizing: border-box;
+        display: flex;
+        justify-content: center;
+        color: #fff;
+        .form_input {
+          display: inline-block;
+          width: 240px;
+          border: 1px solid #fff;
+          border-right: none;
+          border-radius: 25px 0 0 25px;
+          padding: 0 20px;
+          box-sizing: border-box;
+          background: transparent;
+          color: #fff;
+          &:focus {
+            outline: none;
+          }
+          // height: 100%;
+        }
+        .form_btn {
+          display: inline-block;
+          height: 100%;
+          border: 1px solid #fff;
+          border-radius: 0 25px 25px 0;
+          padding: 0 20px;
+          box-sizing: border-box;
+          
+        }
+      }
+    }
   }
 }
