--- a/src/pages/PicWorks/index.module.scss
+++ b/src/pages/PicWorks/index.module.scss
@@ -3,11 +3,13 @@
     padding:20px;
     margin-top: 20px;
     .masonry {
+        width: 100%;
         display: flex;
         flex-direction: row;
         // margin-top: 20px;
         .column {
             display: flex;
+            flex: 1;
             flex-direction: column;
             justify-content: flex-start;
             // align-items: flex-start;
