--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,3 +1,4 @@
 @import './reset.scss';
 @import './common.scss';
-@import '../assets/iconfonts/iconfont.css'
+@import '../assets/iconfonts/iconfont.css';
+@import '~antd/dist/antd.css';
