--- a/src/components/comment/index.module.scss
+++ b/src/components/comment/index.module.scss
@@ -1,9 +1,15 @@
 .comment {
-  .title {
-    display: block;
-    margin: 12px 0 0;
-    font-size: 16px;
-    color: #555;
+  .box_hd {
+    margin-top: 70px;
+    .title {
+      display: block;
+      margin: 12px 0 0;
+      font-size: 24px;
+      color: #555;
+    }
+  }
+  .area {
+    line-height: 1.5;
   }
   .box_bd {
     .content_input {
