--- a/src/pages/Blog/index.module.scss
+++ b/src/pages/Blog/index.module.scss
@@ -20,6 +20,7 @@
                 color: #fff;
                 line-height: 30px;
                 h2 {
+                    color: #fff;
                     font-size: 26px;
                     margin-bottom: 30px;   
                 }
