--- a/src/pages/Home/index.module.scss
+++ b/src/pages/Home/index.module.scss
@@ -60,7 +60,7 @@
 }
 .nav_search {
   width: 100%;
-  background:url(https://images.pexels.com/photos/4037015/pexels-photo-4037015.jpeg) no-repeat center ;
+  background:url(https://images.vrm.cn/jx/2020/05/05/pexels-photo-3312664.jpeg) no-repeat center ;
   background-size: cover;
   padding-bottom: 120px;;
   .box_content {
