--- a/src/components/ArticleCard/index.module.scss
+++ b/src/components/ArticleCard/index.module.scss
@@ -1,4 +1,5 @@
 .article_wrap {
+    width: 900px;
     padding: 40px 45px;
     background-color: #fff;
     margin: 20px auto;
@@ -42,8 +43,11 @@
         }
         .review_wrap{
             .article_link {
-                cursor: pointer;
                 text-decoration: underline;
+                a {
+                    color: #aaa;
+                    cursor: pointer;
+                }
             }
         }
     }
