--- a/src/components/CommentList/index.module.scss
+++ b/src/components/CommentList/index.module.scss
@@ -1,7 +1,12 @@
 .comment_count {
-  display: inline-block;
-  margin: 20px 0 60px;
+  display: block;
+  margin: 10px 0 20px;
+  padding-bottom: 10px;
   font-size: 24px;
+  border-bottom: 1px solid #eee;
+  .icon_message {
+    font-size: 28px;
+  }
 }
 .comment_box {
   font-size: 164x;
