--- a/src/components/Footer/index.module.scss
+++ b/src/components/Footer/index.module.scss
@@ -1,7 +1,7 @@
 .footer {
   width: 100%;
   padding: 40px;
-  background-color: #313331;
+  // background-color: #313331;
   text-align: center;
   color: #a5a5a5;
 
