--- a/src/components/HeadBar/index.scss
+++ b/src/components/HeadBar/index.scss
@@ -12,10 +12,6 @@
       width: 100%;
     }
   }
-  // .logo {
-  //   margin-left: 20px;
-  //   color: #fff;
-  // }
   .menu {
     color: #fff;
     margin-right: 20px;
@@ -26,6 +22,7 @@
         margin-right: 20px;
         .active-item {
           position: relative;
+          transition: all 1s;
           &::after {
             position: absolute;
             content: "";
@@ -35,6 +32,7 @@
             display: inline-block;
             width: 100%;
             height: 2px;
+            transition: all 1s;
             background-color: #fff;
           }
         }
