--- a/src/components/PicCard/index.module.scss
+++ b/src/components/PicCard/index.module.scss
@@ -5,6 +5,15 @@
     // border-radius: 10px;
     box-shadow: 0 0 18px 0 rgba(0,0,0,.05);
     transition: all .6s;
+    &:hover .jump {
+        display: block; 
+        background-color: rgba($color: #000000, $alpha: 0.4);
+        color: #fff;
+        border: 1px solid #fff;
+        border-radius: 5px;
+        cursor: pointer;
+        z-index: 10;
+    }
     img {
         width: 100%;
         // border-radius: 10px;
@@ -56,6 +65,20 @@
             i {
                 font-size: 20px;
             }
+        }
+    }
+    .jump {
+        display: none;
+        position: absolute;
+        // width: 30px;
+        padding: 8px 14px;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        z-index: 100;
+        margin: auto;
+        &:hover {
+            background-color: rgb(19, 35, 50);
         }
     }
     &:hover .mask {
