--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -36,8 +36,11 @@ $size: (
   }
 }
 
-
+// 主题色
 $mcolor: #828d95;
+
+// 点赞色
+$lcolor: #FF6A6A;
 
 .hide {
   display: none;
@@ -47,15 +50,32 @@ $mcolor: #828d95;
   width: 900px;
   height: auto;
   margin: 0 auto;
-  box-sizing: border-box;
-  .section {
-    
+  // box-sizing: border-box;
+}
+
+// 两栏布局
+.container-wrap {
+  max-width: 1300px;
+  display: flex;
+  // height: auto;
+  margin: 0 auto;
+  // text-align: center;
+  .col-main {
+    flex: 1;
+    flex-shrink: 0;
+    margin-left: 20px;
+  }
+  .col-side {
+    width: 350px;
+    // margin: 20px;
   }
 }
+
+//重点布局
 .lg-container {
   width: 1200px;
   height: auto;
-  margin: 0 auto;
+  margin: 20px auto;
   box-sizing: border-box;
   .section {
     padding:20px;
@@ -69,6 +89,10 @@ $mcolor: #828d95;
   margin-right: 10px;
 }
 
+.shadow-1 {
+  box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.05);
+  border-radius: 2px;
+}
 // 引用评论样式
 .quote {
   display: block;
