--- a/src/components/ArticleCard/index.module.scss
+++ b/src/components/ArticleCard/index.module.scss
@@ -4,6 +4,8 @@
     background-color: #fff;
     margin: 20px auto;
     text-align: left;
+    border-radius: 4px;
+    box-shadow: 0 1 3px 0px rgba(80,80,80,.11);
     .aricle_hd {
         .title {
             color: #555;
