--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,4 +1,18 @@
 @import './reset.scss';
 @import './common.scss';
+@import './animation.scss';
 @import '../assets/iconfonts/iconfont.css';
 @import '~antd/dist/antd.css';
+
+
+// .info-appear {
+// 	position: relative;
+// 	opacity: 0.01;
+// 	left: 60px;
+// }
+
+// .info-appear.info-appear-active {
+// 	opacity: 1;
+// 	left: 0px;
+// 	transition: all 200ms linear;
+// }
