--- a/src/pages/Home/index.module.scss
+++ b/src/pages/Home/index.module.scss
@@ -75,7 +75,7 @@
       line-height: 48px;
       font-weight: 700;
       margin-top: 0;
-      margin-bottom: 15px;
+      // margin-bottom: 15px;
       color: #fff;
     }
     .box_bd {
