--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,9 @@
   text-align: center;
 }
 .APP-main {
-  padding-bottom: 100px;
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
 }
 
 
