--- a/src/pages/Source/index.module.scss
+++ b/src/pages/Source/index.module.scss
@@ -12,7 +12,8 @@
             display: flex;
             align-items: center;
             justify-content: space-between;
-            width:  380px;
+            margin-right: 20px;
+            width:  360px;
             height: 64px;
             margin-bottom: 20px;
             line-height: 18px;
@@ -23,12 +24,15 @@
             background-color: rgba($color: #000000, $alpha: .02);
             .box_left {
                 display: flex;
+                align-items: center;
+                flex: 1;
             }
             .thumbnail {
                 display: inline-block;
                 flex-shrink: 0;
                 width: 40px;
                 height: 40px;
+                line-height: 40px;
                 margin: 2px 16px 0 0;
                 border-radius: 4px;
                 overflow: hidden;
@@ -39,6 +43,7 @@
             .card_bd {
                 text-align: left;
                 .title {
+                    width: 200px;
                     font-size: 16px;
                     margin-bottom: 10px;
                     overflow: hidden;
