--- a/src/pages/Source/index.module.scss
+++ b/src/pages/Source/index.module.scss
@@ -21,6 +21,7 @@
             color: #A1A7B7;
             overflow: hidden;
             border-radius: 5px;
+            box-sizing: border-box;
             background-color: rgba($color: #000000, $alpha: .02);
             .box_left {
                 display: flex;
