去除ant,增加自定义message组件，文字，行博列表降序

--- a/src/components/CommentList/index.module.scss
+++ b/src/components/CommentList/index.module.scss
@@ -24,7 +24,7 @@
         height: 16px;
         background: #aaa;
         margin-right: 10px;
-        vertical-align: middle;
+        vertical-align: top;
       }
     }
   }
