--- a/src/styles/reset.scss
+++ b/src/styles/reset.scss
@@ -23,12 +23,9 @@ article, aside, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section {
 	display: block;
 }
-html {
+html,body {
 	width: 100%;
 	overflow-x: hidden;
-}
-body {
-	width: 100%;
 	line-height: 1;
 	background-color: #ededef;
 	font-family: Lato, "Microsoft Jhenghei", "Hiragino Sans GB", "Microsoft YaHei", sans-serif;
