博客展示修改

--- a/src/components/BlogCard/index.module.scss
+++ b/src/components/BlogCard/index.module.scss
@@ -52,6 +52,9 @@
           color: #737373;
           line-height: 24px;
         }
+        a {
+          color: #007fff !important;
+        }
       }
       .label_wrap {
         margin-top: 20px;
